--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,12 @@ BACKEND_PORT=8000
 
 EXTERNAL_API_KEY=ttt_key
 EXTERNAL_API_URL=https://game.dev.hr.alabuga.space/api/v1
+
+KEYCLOAK_URL=https://auth.dev.hr.alabuga.space/auth
+KEYCLOAK_REALM=Alabuga
+KEYCLOAK_CLIENT_ID=alb-admin
+KEYCLOAK_CLIENT_SECRET=secret
+
+HR_AUDIENCE=aud
+
+VERIFY_EXPIRATION=True
