Фикс keycloak url

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ BACKEND_PORT=8000
 EXTERNAL_API_KEY=ttt_key
 EXTERNAL_API_URL=https://game.dev.hr.alabuga.space/api/v1
 
-KEYCLOAK_URL=https://auth.dev.hr.alabuga.space/auth
+KEYCLOAK_URL=https://auth.dev.hr.alabuga.space/auth/
 KEYCLOAK_REALM=Alabuga
 KEYCLOAK_CLIENT_ID=alb-admin
 KEYCLOAK_CLIENT_SECRET=secret
